<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="PD4OperationMode" Id="{70bdd9b8-a7fb-081e-3034-5941eff8cd90}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE PD4OperationMode :
(
	ProfilePositionMode := 1,
	VelocityMode := 2,
	ProfileVelocityMode := 3,
	ProfileTorqueMode := 4,
	HomingMode := 6,
	CyclicSyncPositionMode := 8
)SINT;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>